# Rust_Handbook

./: .gitignore  .rustfmt.tml  .rustfmt.toml  Cargo.toml  notes
01.0_getting_started/: installation
02.1_guessing_game/src/: main.rs
03.1_variables/src/: main.rs
03.2_data_types/src/: main.rs
03.3_functions/src/: main.rs
03.4_comments/src/: main.rs
03.5_control_flow/src/: main.rs
04.1_ownership/src/: main.rs
04.2_references/src/: main.rs
04.3_slice_type/src/: main.rs
05.1_structs/src/: main.rs
05.2_rectangles/src/: main.rs
05.3_methods/src/: main.rs
06.1_enums_and_patterns/src/: main.rs
06.2_match_control/src/: main.rs
06.3_if_let/src/: main.rs
07.1_packages/: Cargo.toml
07.1_packages/src/: main.rs
07.2_modules/src/: main.rs
07.2_modules/src/garden/: folderless_mod.rs  mod.rs
07.2_modules/src/garden/vegetables/: mod.rs
07.3_paths/src/: lib.rs  main.rs
08.1_vectors/src/: main.rs
08.2_strings/src/: main.rs
08.3_hash_maps/src/: main.rs
09.1_panic/src/: main.rs
09.2_result/src/: main.rs
10.1_generics/src/: main.rs
10.2_traits/src/: main.rs
10.3_lifetimes/src/: main.rs
11.1_tests/src/: lib.rs
13.1_closures/src/: main.rs
13.2_iterators/src/: lib.rs  main.rs
projects/minigrep/: poem.txt
projects/minigrep/src/: lib.rs  main.rs
projects/minigrep_v2/: Cargo.toml
projects/minigrep_v2/src/: main.rs
projects/quick_sort/src/: lib.rs  main.rs
