[workspace]

members = [
  "01.1_hello",
  "01.2_hello_cargo",
  "03.1_variables",
  "03.2_data_types",
  "03.3_functions",
  "03.4_comments",
  "03.5_control_flow",
  "04.1_ownership",
  "04.2_references",
  "04.3_slice_type",
  "05.1_structs",
  "05.2_rectangles",
  "05.3_methods",
  "06.1_enums_and_patterns",
  "06.2_match_control",
  "06.3_if_let",
  "07.1_packages",
  "07.2_modules",
  "07.3_paths",
  "08.1_vectors",
  "08.2_strings",
  "08.3_hash_maps",
  "09.1_panic",
  "09.2_result",
  "10.1_generics",
  "10.2_traits",
  "10.3_lifetimes",
  "11.1_tests",
  "13.1_closures",
  "13.2_iterators",
  "projects/quick_sort",
  "projects/minigrep",
  "projects/minigrep_v2",
]
