[package]
name = "minigrep2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0", features=["derive"]} # easy CLI parsing!
anyhow = "1.0" # pretty contextual errors!
indicatif = "0.17.3" # progress bars!
env_logger = "0.10" # every needs longgers

[features]
